--- a/ui/Button/Button.module.scss
+++ b/ui/Button/Button.module.scss
@@ -1,3 +1,5 @@
+// @import './../variables.scss';
+
 .Button {
     position: relative;
     display: inline-block;
@@ -10,13 +12,33 @@
     user-select: none;
     max-width: 100%;
 
-    // min-height: var(--vkui--size_button_small_height--compact);
+     // min-height: var(--vkui--size_button_small_height--compact);
     // border-radius: var(--vkui--size_border_radius--regular);
     // min-width: var(--vkui--size_button_minimum_width--regular);
-    // font-family: var(--vkui--font_family_base);
+    // font-family: var(--vkui--font_family_base); 
   }
 
-  // SIZE
+  // HELPERS
+  .Button__in {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    // width: 100%;
+    // text-align: center;
+    // box-sizing: border-box;
+  }
+
+  .Button__content {
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+  }
+
+  .Button__after {
+
+  }
+
+  // SIZE 
   .Button--size-s {
     font-size: 16px;
     border-radius: 6px;
@@ -34,21 +56,63 @@
 
 
   // MODE
-
   .Button--mode-primary {
-    background-color: rgb(239, 172, 48);
+    // background-color: var(--button-bg);
     color: #fff;
-    &:hover {
-        background-color: rgb(213, 159, 57);
+    transition: var(--button-transition);
+
+    &.Button--appearance-accent {
+      background-color: var(--button-bg);
+
+      &:hover {
+        background-color: var(--button-bg-hover);
+      }
     }
+
+    &.Button--appearance-positive {
+      background-color: var(--button-bg-positive);
+
+      &:hover {
+        background-color: var(--button-bg-hover-positive);
+      }
+    } 
   }
 
-  .Button--mode-outline {
-    border: 2px solid rgb(239, 172, 48);
+   .Button--mode-outline {
+    // border: 2px solid var(--button-border);
     background-color: transparent;
-    color: rgb(239, 172, 48);
+    // color: var(--button-color);
+    transition: var(--button-transition);
 
-    &:hover {
-        background-color: rgb(250, 250, 250);
+    &.Button--appearance-accent {
+      border: 2px solid var(--button-border);
+      color: var(--button-color);
+      &:hover {
+        background-color: var(--gray);
+      }
     }
+
+    &.Button--appearance-positive {
+      border: 2px solid var(--button-border-positive);
+      color: var(--button-color-positive);
+      &:hover {
+        background-color: var(--gray);
+      }
+    }
+
+    // &:hover {
+    //     background-color: var(--button-bg-hover-outline);
+    // }
+  } 
+
+  // Appearance
+  // .Button--appearance-positive {
+
+  // }
+
+  // Stretched
+  .Button--stretched {
+    display: block;
+    width: 100%;
   }
+
