--- a/components/Header/HeaderTemplate/HeaderTemplate.module.scss
+++ b/components/Header/HeaderTemplate/HeaderTemplate.module.scss
@@ -1,5 +1,4 @@
 .Header {
-    // padding: 5px 10px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -7,6 +6,7 @@
     border-radius: 10px;
     padding: 10px 40px;
     box-shadow: 0px 0px 5px #7e7e7e;
+    margin-bottom: 20px;
 }
 
 .left {
